# credit-evaluation-platform

./: .gitignore  .ruff.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  setup.py
docker/: Dockerfile
docs/: ARCHITECTURE.md  COMPLIANCE_MAPPING.md  FAIRNESS.md  FRONTEND.md  GOVERNANCE.md  THREAT_MODEL.md
frontend/: index.html  package.json
frontend/src/: App.tsx  main.tsx  styles.css  types.ts
frontend/src/components/: AuditTable.tsx  FairnessPanel.tsx  Hero.tsx  MetricsGrid.tsx  Navbar.tsx  ScoreForm.tsx
frontend/src/data/: demo.ts
frontend/src/lib/: api.ts
scripts/: generate_synth_data.py  train_baseline.py
services/: __init__.py
services/api/: __init__.py  api.py  app.py  schemas.py  security.py  settings.py  storage.py
src/flg/: config.py  logging.py  schemas.py  types.py
src/flg/api/: main.py
src/flg/data/: __init__.py  synthetic.py
src/flg/explainability/: __init__.py  reason_codes.py
src/flg/fairness/: __init__.py  metrics.py
src/flg/features/: __init__.py  schema.py
src/flg/governance/: __init__.py  audit.py
src/flg/ml/: __init__.py  evaluate.py  model.py  retraining.py  train.py
src/ice/: config.py  logging.py  types.py
src/ice/audit/: __init__.py  events.py  store.py
src/ice/explain/: __init__.py  explainer.py  reason_codes.py
src/ice/fairness/: __init__.py  metrics.py  monitor.py
src/ice/features/: __init__.py  (+2 more)
src/mie_credit_platform/: audit.py  cli.py  settings.py  telemetry.py
tests/: test_end_to_end.py  test_smoke.py
(+17 files in other folders)
